feat(service_account): add an api method to disconnect a service account
add an api method to disconnect a service account
